# cscshell

./: .buildin.c.swp  .cscshell.c.swo  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  builtin.h  builtin_lib.c  builtin_lib.h  cscsh_readline.c  cscsh_readline.h  cscshell  cscshell.c  environment.c  environment.h  history.c  history.h  makefile
spec/: environment_spec.cpp  history_spec.cpp
src/: builtin.h  builtin_lib.c  cscsh_readline.c  cscsh_readline.h  cscsh_string.c  cscsh_string.h  cscshell.c  environment.c  environment.h  history.c  history.h
